# trading_platform

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README  celery-beat.sh  celery-worker.sh  docker-compose.yml  entrypoint.sh  env.example  localstack-setup.sh  pyproject.toml  requirements.txt  run_all_tests.py  setup.cfg  tests.sh
aws/: buckets.sh
base/: exceptions.py  repositories.py  services.py
inventory/: admin.py  exceptions.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
inventory/tests/: test_views.py
kafka_service/: kafka_logger.py  kafka_service.py
orders/: admin.py  exceptions.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_order_type_alter_order_price_limit.py  0003_order_user_action_type.py  0004_order_closing_price.py
orders/tests/: test_check_condition_for_close.py  test_is_ready_to_close.py  test_ses_email.py  test_views.py
stocks/: admin.py  exceptions.py  models.py  repositories.py  services.py  tasks.py  tests.py  urls.py  views.py
stocks/fixtures/: stocks.json
stocks/migrations/: 0001_initial.py  (+2 more)
stoks/: admin.py  apps.py  models.py
subscriptions/: admin.py  models.py
trading_platform/: celery.py  settings.py  urls.py  wsgi.py
user_management/: admin.py  authentication.py  exceptions.py  managers.py  models.py  permissions.py  repositories.py  serializers.py  services.py  urls.py  veiws.py  views.py
user_managment/: apps.py
(+6 files in other folders)
